fixed contrast issue

--- a/finalproject/styles/site_plan.css
+++ b/finalproject/styles/site_plan.css
@@ -7,12 +7,12 @@ body {
     line-height: 1.6;
 }
 
-h1,
-h2,
-h3 {
+h1 {
     font-family: 'Montserrat', sans-serif;
     color: #00bfa5;
 }
+
+
 
 header,
 footer {
